--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "egg-pkg-template",
   "version": "1.0.0",
   "description": "",
-  "private": true,
+  "bin": "server.js",
   "egg": {
     "declarations": true
   },
@@ -25,6 +25,7 @@
   "scripts": {
     "start": "egg-scripts start --daemon --title=egg-server-egg-pkg-template",
     "stop": "egg-scripts stop --title=egg-server-egg-pkg-template",
+    "build": "pkg . --out-path D:/ --debug",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
@@ -33,6 +34,19 @@
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
     "autod": "autod"
+  },
+  "pkg": {
+    "scripts": [
+      "./app/**/*.js",
+      "./config/*",
+      "./node_modules/nanoid/**/*.js"
+    ],
+    "assets": [
+      "./app/public/**/*"
+    ],
+    "targets": [
+      "node12-win-x64"
+    ]
   },
   "ci": {
     "version": "10"
